--- a/_notes/20200305.md
+++ b/_notes/20200305.md
@@ -2,11 +2,19 @@
 layout: note
 path: "/20200305"
 date: "2020-03-05"
-title: "20200305
+title: "20200305"
 tags: "Eames, think wrong house, case study house,"
 excerpt: "A preview of my first post"
 ---
 
+---
+layout: note
+path: "/20200305"
+date: "2020-03-05"
+title: "20191130 notes"
+tags: ['Eames, think wrong house, case study house']
+excerpt: "A preview of my first post"
+---
 
 
 → Started making a clock that uses Japanese charters to tell time.
