--- a/_notes/20200124.md
+++ b/_notes/20200124.md
@@ -1,4 +1,9 @@
-
+---
+path: "/20200245"
+date: "2020-01-24"
+title: "Capitalism"
+tags: pace layering,
+excerpt: "A preview of my first post"
+---
 
 Capitalism has failed, if you choose to pay attention
-
