Updated front matter format

--- a/_notes/2020/20200103.md
+++ b/_notes/2020/20200103.md
@@ -1,5 +1,6 @@
 ---
-path: "/20200103"
+layout: note
+path: /20200103
 date: "2020-01-03"
 title: "20200103 notes"
 tags: ['notes']
@@ -21,13 +22,12 @@ Reading
 
 My favorite books of 2019
 
-New dark age 
+New dark age
 
-The messy middle 
+The messy middle
 
 The fifth risk
 
-Polaris rising 
+Polaris rising
 
 Three body problem  
-
