updating paths for pages

--- a/_notes/2019/20190119.md
+++ b/_notes/2019/20190119.md
@@ -1,6 +1,6 @@
 ---
 layout: note
-path: /20200119
+path: /20200119/
 date: "2020-01-19"
 title: "Think Wrong House Exploration 2"
 tags: pico grid,think wrong house, architecture,
